fix: drop back to postgres 9.4 to avoid another error with 9.6, add healthcheck to app, add autoheal container to bounce on failed healthcheck, actually get tomcat memory settings working